--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -107,30 +107,25 @@
         }
 
         @keyframes shake {
-
-            0%,
-            100% {
-                transform: translateX(0);
-            }
-
-            10%,
-            30%,
-            50%,
-            70%,
-            90% {
-                transform: translateX(-5px);
-            }
-
-            20%,
-            40%,
-            60%,
-            80% {
-                transform: translateX(5px);
-            }
+            0%, 100% { transform: translateX(0); }
+            10%, 30%, 50%, 70%, 90% { transform: translateX(-5px); }
+            20%, 40%, 60%, 80% { transform: translateX(5px); }
         }
 
         .shake {
             animation: shake 0.5s;
+        }
+
+        .forgot-password {
+            display: block;
+            margin-top: 1rem;
+            color: var(--primary-color);
+            text-decoration: none;
+            font-size: 0.9rem;
+        }
+
+        .forgot-password:hover {
+            text-decoration: underline;
         }
 
         @media (max-width: 600px) {
@@ -160,6 +155,7 @@
             </div>
 
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <a href="forgot-password.html" class="forgot-password">Forgot Password?</a>
         </form>
     </div>
 
