--- a/src/main/resources/static/successRegister.html
+++ b/src/main/resources/static/successRegister.html
@@ -14,6 +14,7 @@
             --text-color: #333;
             --success-color: #2ecc71;
             --hover-color: #3a7bd5;
+            --warning-color: #f39c12;
         }
 
         body {
@@ -44,6 +45,10 @@
             font-size: 4rem;
             color: var(--success-color);
             margin-bottom: 1rem;
+        }
+
+        .warning-icon {
+            color: var(--warning-color);
         }
 
         h1 {
@@ -81,6 +86,15 @@
             font-size: 0.9rem;
         }
 
+        .warning {
+            background-color: #fff3cd;
+            border: 1px solid #ffeeba;
+            border-radius: 4px;
+            color: #856404;
+            margin-bottom: 1rem;
+            padding: 0.75rem;
+        }
+
         @media (max-width: 400px) {
             h1 {
                 font-size: 1.5rem;
@@ -100,15 +114,34 @@
 
 <body>
     <div class="container">
-        <i class="fas fa-check-circle icon"></i>
+        <i id="statusIcon" class="fas fa-check-circle icon"></i>
         <h1>Registration Successful</h1>
         <p>Your registration for the Student Attendance Management System (SAMS) was successful.</p>
+        <div id="warningMessage" class="warning" style="display: none;">
+            <i class="fas fa-exclamation-triangle"></i>
+            <p>You have chosen to skip face scanning. Please note that you won't be able to use the face recognition feature for attendance marking. You'll need to use your assigned RFITag instead.</p>
+        </div>
         <p>Thank you for joining us! You can now access your dashboard and start using the system.</p>
         <a href="login.html" class="btn">Log In</a>
         <div class="footer">
             <p>Need help? <a href="index.html" style="color: var(--primary-color);">Return to Home</a></p>
         </div>
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const skipped = urlParams.get('skipped');
+            const warningMessage = document.getElementById('warningMessage');
+            const statusIcon = document.getElementById('statusIcon');
+
+            if (skipped === 'true') {
+                warningMessage.style.display = 'block';
+                statusIcon.classList.remove('fa-check-circle');
+                statusIcon.classList.add('fa-exclamation-circle', 'warning-icon');
+            }
+        });
+    </script>
 </body>
 
 </html>
